--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
 <body>
     <div class="content">
-        <h2>琪儿，记得吃早饭，喉咙不舒服要多休息，不要总想赚钱，照顾好自己哈
-            琪儿是最美的，最棒的！！
-            我也会很努力，加油！！
-        </h2>
+        <h2>琪儿，记得吃早饭，不舒服要多休息，不要总想赚钱，照顾好自己哈 </h2>
+        <h2>琪儿是最美的，最棒的！！ </h2>
+        <h2>  我也会很努力，加油！！</h2>
+       
         <div class="timer">
             <b id="d"></b> Days <b id="h"></b> Hours <b id="m"></b> Minutes <b id="s"></b> Seconds
         </div>
@@ -55,7 +55,7 @@
 
     <script>
         function timer() {
-            var start = new Date(2013, 12, 1); // 2015.7.2
+            var start = new Date(2018, 8, 7); // 2015.7.2
             var t = new Date() - start;
             var h = ~~(t / 1000 / 60 / 60 % 24);
             if (h < 10) {
