--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
 <body>
     <div class="content">
-        <h2>琪儿，记得吃早饭，不舒服要多休息，不要总想赚钱，照顾好自己哈 </h2>
-        <h2>琪儿是最美的，最棒的！！ </h2>
-        <h2>  我也会很努力，加油！！</h2>
+        <h2> 琪儿，记得吃早饭，不舒服要多休息，不要总想赚钱，照顾好自己哈 <br> </h2>
+        <h2> 琪儿是最美的，最棒的！！<br> </h2>
+        <h2>  我也会很努力，加油！！<br> </h2>
        
         <div class="timer">
             <b id="d"></b> Days <b id="h"></b> Hours <b id="m"></b> Minutes <b id="s"></b> Seconds
