--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body>
     <div class="content">
-        <h2> 琪儿，记得吃早饭，不舒服要多休息，不要总想赚钱，照顾好自己哈 <br> </h2>
+        <h2> 琪儿，记得吃早饭，不舒服要多休息，钱要慢慢赚，照顾好自己 <br> </h2>
         <h2> 琪儿是最美的，最棒的！！<br> </h2>
         <h2>  我也会很努力，加油！！<br> </h2>
  
