--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>琪儿悄悄话</title>
+    <title>琪儿是我的幸运女神</title>
     <style>
         body {
             -webkit-font-smoothing: antialiased;
@@ -18,7 +18,7 @@
         }
         
         h2 {
-            font-size: 100%;
+            font-size: 150%;
             font-weight: 200;
         }
         
