--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>琪儿是我的幸运女神</title>
+    <title> 嘿嘿嘿嘿</title>
     <style>
         body {
             -webkit-font-smoothing: antialiased;
@@ -44,9 +44,9 @@
 
 <body>
     <div class="content">
-        <h2> 琪儿，记得吃早饭，不舒服要多休息，钱要慢慢赚，照顾好自己 <br> </h2>
-        <h2> 琪儿是最美的，最棒的！！<br> </h2>
-        <h2>  我也会很努力，加油！！<br> </h2>
+        <h2> 记得吃早饭，不舒服要多休息，照顾好自己 <br> </h2>
+        <h2> 老婆是最美的，最棒的！！<br> </h2>
+        <h2> 我也会很努力，加油！！<br> </h2>
  
     </div>
 
